# Offline_Signature_Verification

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dataset.py  LESSONS-LEARNED.md  Model.py  README  README.md  pyproject.toml  requirements.txt  test_roc.py  train_model.py  utils.py
scripts/: README.md  evaluate.py  prepare_data.py  quick_test.py  train.py
src/signature_verification/: __init__.py  dataset.py  model.py  utils.py
tests/: __init__.py  conftest.py  test_dataset.py  test_model.py  test_utils.py
